# xendocast

./: CMakeLists.txt  LICENSE  README.md
fillporosity/: BinarizationRoutine.hpp  CMakeLists.txt  ConatrainedOpeningRoutine.hpp  ConstrainedMorphology.cpp  ConstrainedMorphology.hpp  FillPorosityCommand.cpp  FillPorosityCommand.hpp  PorosityAnalyzer.cpp  PorosityAnalyzer.hpp  PorosityClosingRoutine.hpp  fill_porosity_main.cpp
mi/: Argument.hpp  ArgumentExporter.hpp  ArgumentImporter.hpp  AssemblyMesh.hpp  Attribute.hpp  AttributeSet.hpp  BooleanAttribute.hpp  Clamp.hpp  CommandTemplate.hpp  ConnectedComponentLabeller.hpp  ConnectedComponentLabellerRle.hpp  DistanceFieldComputer.hpp  DoubleNumericAttribute.hpp  Exporter.hpp  FileNameConverter.hpp  FunctionObject.hpp  Graph.hpp  Importer.hpp  Kdtree.hpp  Limits.hpp  Logger.hpp  Mesh.hpp  MeshConnectedComponentExtractor.hpp  MeshExporter.hpp  MeshExporterObj.hpp  MeshExporterOff.hpp  MeshExporterPly.hpp  MeshExporterPlyWithColor.hpp  MeshExporterStl.hpp  MeshImporter.hpp  MeshImporterObj.hpp  MeshImporterStl.hpp  MeshStitcher.hpp  MeshUtility.hpp  Neighbor.hpp  NumericAttribute.hpp  ParallelFor.hpp  Parse.hpp  PriorityQueue.hpp  Range.hpp  (+20 more)
mi/functional/: binarize.hpp  binarize_voxel.hpp  cast.hpp  cast_voxel.hpp  classify_voxel.hpp  copy_voxel.hpp  diff.hpp  dilate.hpp  erode.hpp  extract_boundary.hpp  extract_medial.hpp  filter.hpp  histogram.hpp  is_boundary.hpp  look_up.hpp  minmax.hpp  negate_binary.hpp  set_value.hpp
src/: BinarizationRoutine.hpp  Binarizer.hpp  CMakeLists.txt  EndocastExtractor.cpp  EndocastExtractor.hpp  ExtractEndocastCommand.cpp  ExtractEndocastCommand.hpp  MaskingRoutine.hpp  WatershedProcessor.hpp  WatershedRoutine.hpp  xendocast_main.cpp
test/: CMakeLists.txt  visws.cpp
xendocast/: Binarizer.hpp  CMakeLists.txt  EndocastExtractor.cpp  EndocastExtractor.hpp  ExtractEndocastCommand.cpp  ExtractEndocastCommand.hpp  xendocast_main.cpp
