CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT(xendocast)
if(APPLE)
	SET(CMAKE_MACOSX_RPATH 1)
	ADD_DEFINITIONS(-g -O3 -Wall -std=c++11 -Werror -Wno-c++98-compat -Wno-c++98-compat-pedantic)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}  /usr/local/include/eigen3 )
elseif(UNIX)
	ADD_DEFINITIONS(-g -O3 -Wall)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}  /usr/local/include/eigen3 )
elseif (WIN32)
	set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
	SET(CMAKE_INSTALL_PREFIX, "C:/Program Files/mi")
	INCLUDE_DIRECTORIES(d:/usr/local/include )
	if(CMAKE_SIZEOF_VOID_P EQUAL 8) # 64bit system
		LINK_DIRECTORIES(d:/usr/local/lib/x64)
	else()
		LINK_DIRECTORIES(d:/usr/local/lib)
	endif()
endif()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

