CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT(xendocast)
if (WIN32)
   set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
   SET(EIGEN3_INCLUDE_DIR "c:/usr/local/include/eigen3")
else ()
   SET(EIGEN3_INCLUDE_DIR "/usr/local/include/eigen3")
endif()
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} . )
ADD_DEFINITIONS(-O3)
ADD_SUBDIRECTORY(xendocast)
ADD_SUBDIRECTORY(fillporosity) 
